Fix spacing of sun/moon

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -29,6 +29,8 @@ body {
   #moon {
     stroke: mix($fg, $bg, 35%);
     fill: $bg;
+    display: inline-block;
+    margin-left: 5px;
   }
 
   &.dark {
